   do, decide between showing a spinner and showing a progress dialog in the
   ui_*_info_collection_progress() methods. This fixes libX11 crashes when
   multiple UI threads do changes concurrently (LP: #901675), and also avoids
   multi-thread induced crashes in Pango (LP: #943661). The removal of the
   collect() method, this also fixes the new crashes in it. (LP: #942098, 
   LP: #939803)

Improvements:
 - test/run: Drop "local" argument. This now tests against the source tree when
   run in the source tree root, and against the system libraries/programs when
   run from anywhere else.
 - test/run: Consider command line arguments as test names and only run those
   when given. Also support just running a single test.
 - testsuite: Force the skipping of online tests when $SKIP_ONLINE_TESTS is
   set.
 - hookutils.py, xsession_errors(): Add a reasonable default pattern which
   matches glib-style warnings, errors, criticals etc. and X window errors.
   In data/general-hooks/generic.py, call it with that default instead of the
   rather incomplete custom pattern. (LP: #932660)
 - packaging.py: Add get_package_origin() method, and implement it for
   apt-dpkg.
 - report.py, add_package_info(): Add "[origin: ...]" tag to "Package" and
   "Dependencies" fields for any package which is not native to the
   distribution. If any such package is present, tag the report with
   "third-party-packages" in data/general-hooks/generic.py. (LP: #927912)
 - apport/packaging.py: Add get_uninstalled_package() method as a helper method
   for the test suite. Use it instead of a hardcoded Debian/Ubuntu specific
   name in test/test_hooks.py.
 - test/test_ui_{gtk,kde}.py: Add test cases for complete UI workflow runs for
   reporting a bug against an installed/uninstalled package, and reporting a
   crash with and without showing details. This reproduces the recent crashes
   like LP #901675 or LP #943661.
 - test_ui.py: Add a test case for reporting a complete report on uninstalled